@@ -1,22 +1,10 @@
 # Example of custom Java runtime using jlink in a multi-stage container build
 FROM eclipse-temurin:11 as jre-build
-
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.base \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
 
 # Define your base image
 FROM debian:buster-slim
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
-
-# Continue with your application deployment
-RUN mkdir /opt/app
-COPY /target/geolocator-0.0.1-SNAPSHOT.jar /opt/app
-CMD ["java", "-jar", "/opt/app/geolocator-0.0.1-SNAPSHOT.jar"]
+COPY --from=build /home/app/target/geolocator-0.0.1-SNAPSHOT.jar /usr/local/lib/demo.jar
+ENTRYPOINT ["java","-jar","/usr/local/lib/geolocator-0.0.1-SNAPSHOT.jar"]
